# llamacpp-server

./: .env.example  .gitignore  CHANGELOG.md  GPU_INSTALL.md  INSTALL.md  PROFILES_OPTIMIZATION_REPORT.md  README.md  build_rag.py  modern_build_rag.py  pyproject.toml  pytest.ini  test_prompt_structure.py
docs/: API.md  CHANGELOG.md  CONFIGURATION.md  CONTEXT_OPTIMIZATION_REPORT.md  GPU_SETUP.md  INSTALLATION.md  MIGRATION_TO_MODERN_RAG.md  MODERN_RAG_INTEGRATION.md  PERFORMANCE_OPTIMIZATION.md  RAG_IMPROVEMENTS.md
llamacpp_server/: __init__.py  main.py
llamacpp_server/config/: __init__.py  settings.py
llamacpp_server/domain/: __init__.py  models.py  protocols.py
llamacpp_server/infrastructure/: __init__.py  container.py  logging.py  modern_container.py
llamacpp_server/llama/: __init__.py  factory.py  history_manager.py  service.py
llamacpp_server/prompts/: __init__.py  protocols.py  service.py  templates.py
llamacpp_server/retrieval/: __init__.py  embedding_service.py  faiss_store.py  modern_chunker.py  modern_embeddings.py  modern_rag_builder.py  modern_rag_service.py  modern_vector_store.py  protocols.py  rag_builder.py  rag_service.py  semantic_chunker.py
llamacpp_server/web/: __init__.py  app.py
llamacpp_server/web/routers/: __init__.py  debug.py  fallback.py  health.py  ollama.py  openai.py  webui.py
tests/: __init__.py  conftest.py  test_config.py  test_llama_service.py  test_semantic_chunking.py  test_simple_api.py
